# tokiowebserver

./: Cargo.toml  README.md
assets/: style.css
migrations/: 20240204015037_posts.sql  20240206053023_posts.sql  20240212080316_posts.sql
pages/: hello.html  styles.css
src/: config.rs  main.rs
src/database/: mod.rs
src/pages/: mod.rs
src/pages/about/: about.rs
src/pages/blog/: mod.rs
src/pages/index/: mod.rs
templates/: about.html  base.html  hello.html  home.html  posts.html
