[package]
name = "tokiowebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
reqwest = {version= "0.11.23", features = ["json", "blocking", "cookies", "socks", "default"]}
axum = "0.7.4"
askama = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
anyhow = "1.0.79"
