[package]
name = "tokiowebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = {version = "0.7.4", features = ["macros"]}
askama = {version = "0.12.1", features = ["with-axum"]}
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
serde = "1.0.195"
askama_axum = "0.4.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "postgres", "chrono"] }
sqlx-cli = "0.7.3"
surrealdb = "1.2.0"
serde_json = "1.0.113"

